Added fixed position

--- a/W3/w3project.html
+++ b/W3/w3project.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+<div id="fixedText">W3 Project</div>
 <div class="container">
   <div class="header">
   <div id="default" class="transEx"><strong>Sumbitted By :</strong> Ramon Rafael G. Frias</a> 
